--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </html> -->
 
 
-
+<!-- 
 <!DOCTYPE html>
 <html>
 
@@ -44,6 +44,28 @@
         <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
         <a-entity material='color: red' geometry='primitive: box'
             gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011" scale="5 5 5"></a-entity>
+    </a-scene>
+</body>
+
+</html> -->
+
+
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+</head>
+
+<body style="margin: 0; overflow: hidden;">
+    <a-scene embedded loading-screen="enabled: false;" arjs="sourceType: webcam; debugUIEnabled: false;">
+        <a-image src="assets/asset.jpeg" look-at="[gps-camera]" scale="1 1 1"
+            gps-entity-place="latitude: 6.7251022; longitude: 79.9345011;"></a-image>
+
+        <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
 </body>
 
