--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
     <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false'
         renderer='antialias: true; alpha: true'>
         <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-        <a-entity material='color: red' geometry='primitive: box'
-            gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011" scale="5 5 5"></a-entity>
+        <!-- <a-entity material='color: red' geometry='primitive: box'
+            gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011" scale="5 5 5"></a-entity> -->
+        <a-assets>
+            <a-asset-item id="animated-asset" src="assets/asset.glb"></a-asset-item>
+        </a-assets>
+        <a-entity gltf-model="#animated-asset" scale="1 1 1"
+            gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011"></a-entity>
     </a-scene>
 </body>
 
