--- a/index.html
+++ b/index.html
@@ -36,19 +36,24 @@
         src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
     <script type='text/javascript'
         src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 
-<body>
+<body style="margin: 0; overflow: hidden;">
     <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false'
-        renderer='antialias: true; alpha: true'>
+        renderer="logarithmicDepthBuffer: true;" embedded loading-screen="enabled: false;">
         <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
         <!-- <a-entity material='color: red' geometry='primitive: box'
             gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011" scale="5 5 5"></a-entity> -->
         <a-assets>
-            <a-asset-item id="animated-asset" src="assets/asset.glb"></a-asset-item>
+            <a-asset-item id="animated-asset" src="./assets/asset.glb"></a-asset-item>
         </a-assets>
-        <a-entity gltf-model="#animated-asset" scale="1 1 1"
-            gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011"></a-entity>
+        <a-entity look-at="[gps-new-camera]" animation-mixer="loop: repeat" gltf-model="#animated-asset"
+            scale="1.6818637258783564 1.6818637258783564 1.6818637258783564"
+            gps-entity-place="latitude: 6.7251022; longitude: 79.9345011;"></a-entity>
     </a-scene>
 </body>
 
