--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
     <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false'
         renderer="logarithmicDepthBuffer: true;" embedded loading-screen="enabled: false;">
         <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
-        <!-- <a-entity material='color: red' geometry='primitive: box'
-            gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011" scale="5 5 5"></a-entity> -->
-        <a-assets>
-            <a-asset-item id="animated-asset" src="./assets/asset.glb"></a-asset-item>
+        <a-entity material='color: red' geometry='primitive: box'
+            gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011" scale="5 5 5"></a-entity>
+        <!-- <a-assets>
+            <a-asset-item id="animated-asset" src="assets/asset.glb"></a-asset-item>
         </a-assets>
-        <a-entity look-at="[gps-new-camera]" animation-mixer="loop: repeat" gltf-model="#animated-asset"
-            scale="1.6818637258783564 1.6818637258783564 1.6818637258783564"
-            gps-entity-place="latitude: 6.7251022; longitude: 79.9345011;"></a-entity>
+        <a-entity gltf-model="#animated-asset" scale="1 1 1"
+            gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011"></a-entity> -->
     </a-scene>
 </body>
 
