--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -45,6 +45,29 @@
         <a-entity material='color: red' geometry='primitive: box'
             gps-new-entity-place="latitude: 6.7251022; longitude: 79.9345011" scale="5 5 5"></a-entity>
 
+    </a-scene>
+</body>
+
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>GeoAR.js demo</title>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+</head>
+
+<body>
+    <a-scene vr-mode-ui="enabled: false" arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
+        <a-text value="This content will always face you." look-at="[gps-camera]" scale="120 120 120"
+            gps-entity-place="latitude: 6.7251022; longitude: 79.9345011;"></a-text>
+        <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
 </body>
 
